--- a/package.json
+++ b/package.json
@@ -10,28 +10,55 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "supabase:init": "supabase init",
+    "supabase:login": "supabase login",
+    "supabase:link": "supabase link --project-ref kvfdrldbzbneoftbtogx",
+    "db:migrate:new": "supabase migration new",
+    "db:reset": "supabase db reset --linked",
+    "db:reset:beta": "npx supabase@beta db reset --linked",
+    "db:seed": "node --env-file=.env database/seed.js",
+    "supabase:types": "npx supabase gen types typescript --project-id kvfdrldbzbneoftbtogx --schema public > database/types.ts"
   },
   "dependencies": {
+    "@css-render/vue3-ssr": "^0.15.14",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/vite": "^4.1.7",
+    "@vueuse/core": "^13.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.510.0",
     "pinia": "^3.0.1",
+    "radix-vue": "^1.9.17",
+    "reka-ui": "^2.2.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.9",
+    "unplugin-vue-components": "^28.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.15.17",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.26.0",
     "eslint-plugin-vue": "~10.1.0",
     "jiti": "^2.4.2",
+    "naive-ui": "^2.41.0",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "supabase": "^2.22.12",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.3",
     "unplugin-vue-router": "^0.12.0",
+    "vfonts": "^0.0.3",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.10"
